--- a/desafio/src/pages/main-page/components/card-component.scss
+++ b/desafio/src/pages/main-page/components/card-component.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    overflow: hidden;
 
     .card-content-box{
         display: flex;
@@ -31,7 +32,6 @@
         flex-direction: column;
         padding-left: 20px;
         align-items: flex-start;
-        
     }
 
 }
