--- a/desafio/src/components/side-menu/side-menu.css
+++ b/desafio/src/components/side-menu/side-menu.css
@@ -73,7 +73,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #5A5A70;
+    background-color: #2F2F3B;
     height: 100%;
     padding-top: 0;
     flex-direction: row;
