--- a/desafio/src/pages/main-page/components/card-component.scss
+++ b/desafio/src/pages/main-page/components/card-component.scss
@@ -20,10 +20,16 @@
         padding-top: 20px;
             
         img{
+            transition: 600ms;
             width: 60px;
             height: 60px;
             border-radius: 200px;
             margin-right: 10px;
+        }
+        img:hover{
+            transition: 600ms;
+            transform: scale(2);
+            box-shadow: rgba(204, 204, 204, 0.5) 0px 0px 5px 1px;
         }
     }
 
