--- a/desafio/src/pages/main-page/main-page.css
+++ b/desafio/src/pages/main-page/main-page.css
@@ -1,3 +1,11 @@
+.loading-box {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .home-main-box {
   width: 100%;
 }
@@ -35,7 +43,6 @@
   height: 50px;
   margin-bottom: 120px;
   display: flex;
-  justify-content: center;
   align-items: center;
   justify-content: center;
 }
