--- a/desafio/src/pages/main-page/main-page.scss
+++ b/desafio/src/pages/main-page/main-page.scss
@@ -1,3 +1,8 @@
+.loading-box{
+    width: 100%; height: 100vh; display: flex; align-items: center;justify-content: center;
+}
+
+
 .home-main-box{
     
     width: 100%;
@@ -41,7 +46,6 @@
         height: 50px;
         margin-bottom: 120px;
         display: flex;
-        justify-content: center;
         align-items: center;
         justify-content: center;
 
