--- a/desafio/src/pages/cat-page/cat-page.scss
+++ b/desafio/src/pages/cat-page/cat-page.scss
@@ -14,7 +14,6 @@
             width: 100%;
             padding: 20px;
             height: 100px;
-
         }
 
         section{
@@ -61,8 +60,80 @@
         align-items: center;
 
         img{
-            width: 50%;
+            width: 70%;
+            border-radius: 30px;
         }
 
     }
+}
+
+@media screen and (max-width: 850px) {
+    .cat-main-box{
+        flex-direction: column-reverse;
+
+        .http-main-box{
+            height: 50vh;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            max-width: none;
+            min-height: auto;
+            padding-bottom: 20px;
+
+            article{
+                width: 100%;
+                padding: 0;
+                height: 100px;
+                
+                h1{
+                    text-align: center;
+                }
+            }
+
+            section{
+                width: 100%;
+                display: flex;
+                overflow-y: scroll;
+    
+                ul{
+                    width: 100%;
+                    padding: 20px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+    
+                  
+                }
+            }
+        }
+
+        .image-main-box{
+            width: 100%;
+            height: 350px;
+            min-height: auto;
+
+    
+            img{
+                width: 60%;
+            }
+    
+        }
+    }
+    
+}
+
+@media screen and (orientation: portrait) {
+
+    .image-main-box{
+        width: 100%;
+        height: 350px;
+        min-height: auto;
+
+
+        img{
+            width: 70%;
+        }
+
+    }
+    
 }
