adicionada tela de cachorros

--- a/desafio/src/pages/cat-page/cat-page.scss
+++ b/desafio/src/pages/cat-page/cat-page.scss
@@ -76,9 +76,10 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            max-width: none;
+            max-width: 100%;
             min-height: auto;
             padding-bottom: 20px;
+            border-right: none;
 
             article{
                 width: 100%;
