--- a/desafio/src/pages/cat-page/cat-page.css
+++ b/desafio/src/pages/cat-page/cat-page.css
@@ -68,9 +68,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    max-width: none;
+    max-width: 100%;
     min-height: auto;
     padding-bottom: 20px;
+    border-right: none;
   }
   .cat-main-box .http-main-box article {
     width: 100%;
