--- a/desafio/src/pages/dog-page/dog-page.css
+++ b/desafio/src/pages/dog-page/dog-page.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: space-between;
   min-height: 100vh;
-  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 .dog-main-box article {
   width: 100%;
@@ -18,13 +19,14 @@
   justify-content: center;
 }
 .dog-main-box section img {
-  width: 60%;
+  width: 70%;
 }
 .dog-main-box article:last-child {
   height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: white;
 }
 .dog-main-box article:last-child button {
   transition: 400ms;
