--- a/desafio/src/pages/dog-page/dog-page.scss
+++ b/desafio/src/pages/dog-page/dog-page.scss
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: space-between;
     min-height: 100vh;
-    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 
     article{
         width: 100%;
-        //padding: 20px;
+        //padding: 200px;
         height: 100px;
 
         h1{
@@ -21,7 +22,7 @@
         justify-content: center;
 
         img{
-            width: 60%;
+            width: 70%;
         }
 
     }
@@ -31,6 +32,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        background-color: white;
 
         button{
             transition: 400ms;
@@ -46,6 +48,7 @@
         button:hover{
             transition: 400ms;
             transform: scale(1.005);
+            
         }
     }
 }
