--- a/desafio/src/pages/client-page/client-page.css
+++ b/desafio/src/pages/client-page/client-page.css
@@ -1,1 +1,96 @@
-/*# sourceMappingURL=client-page.css.map */
+.client-main-box {
+  display: flex;
+}
+.client-main-box .input-main-box {
+  height: 100vh;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  border-right: rgba(204, 204, 204, 0.5) solid 2px;
+  min-height: 100vh;
+  max-width: 500px;
+}
+.client-main-box .input-main-box article {
+  width: 100%;
+  padding: 20px;
+  height: 100px;
+}
+.client-main-box .input-main-box section {
+  width: 100%;
+  display: flex;
+}
+.client-main-box .input-main-box section form {
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.client-main-box .input-main-box section form input {
+  transition: 400ms;
+  color: #666;
+  height: 30px;
+  margin-bottom: 20px;
+  border-radius: 15px;
+  padding: 10px;
+  border: rgba(204, 204, 204, 0.5) solid 1px;
+}
+.client-main-box .input-main-box section form input:focus {
+  outline: none;
+  transition: 400ms;
+  box-shadow: rgba(204, 204, 204, 0.5) 0px 0px 5px 1px;
+  transform: scale(1.005);
+}
+.client-main-box .input-main-box section form button {
+  transition: 400ms;
+  background-color: #2F2F3B;
+  color: white;
+  height: 45px;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+.client-main-box .input-main-box section form button:hover {
+  transition: 400ms;
+  transform: scale(0.95);
+}
+.client-main-box .input-main-box section form button:active {
+  transition: 400ms;
+  transform: scale(1);
+}
+@media screen and (max-width: 850px) {
+  .client-main-box {
+    flex-direction: column-reverse;
+  }
+  .client-main-box .input-main-box {
+    height: 50vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    min-height: auto;
+    padding-bottom: 20px;
+    border-right: none;
+  }
+  .client-main-box .input-main-box article {
+    width: 100%;
+    padding: 0;
+    height: 100px;
+  }
+  .client-main-box .input-main-box article h1 {
+    text-align: center;
+  }
+  .client-main-box .input-main-box section {
+    width: 100%;
+    display: flex;
+    overflow-y: scroll;
+  }
+  .client-main-box .input-main-box section form {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}/*# sourceMappingURL=client-page.css.map */
