--- a/desafio/src/pages/client-page/client-page.css
+++ b/desafio/src/pages/client-page/client-page.css
@@ -59,9 +59,32 @@
   transition: 400ms;
   transform: scale(1);
 }
-@media screen and (max-width: 850px) {
+.client-main-box .list-main-box {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: scroll;
+}
+.client-main-box .list-main-box article h1 {
+  padding: 20px;
+}
+.client-main-box .list-main-box article p {
+  padding: 20px;
+  padding-top: 0px;
+}
+.client-main-box .list-main-box .list-box {
+  max-width: 100%;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+}
+
+@media screen and (max-width: 900px) {
   .client-main-box {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
   .client-main-box .input-main-box {
     height: 50vh;
@@ -84,7 +107,6 @@
   .client-main-box .input-main-box section {
     width: 100%;
     display: flex;
-    overflow-y: scroll;
   }
   .client-main-box .input-main-box section form {
     width: 100%;
@@ -92,5 +114,65 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+@media screen and (orientation: portrait) {
+  .client-main-box {
+    height: 150vh;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .input-main-box {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: 100%;
+    border-right: none;
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+    margin-bottom: 30px;
+  }
+  .input-main-box article {
+    width: 100%;
+    padding: 20px;
+    height: 100px;
+  }
+  .input-main-box section {
+    width: 100%;
+    display: flex;
+  }
+  .input-main-box section form {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .input-main-box section form input {
+    transition: 400ms;
+    color: #666;
+    height: 30px;
+    width: 80%;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    padding: 10px;
+    border: rgba(204, 204, 204, 0.5) solid 1px;
+  }
+  .input-main-box section form button {
+    width: 150px;
+  }
+  .list-main-box {
+    height: 80vh;
+    margin-bottom: 10vh;
+    overflow-y: scroll;
+  }
+}
+@media screen and (min-width: 1800px) {
+  .list-box {
+    max-width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
   }
 }/*# sourceMappingURL=client-page.css.map */
