--- a/desafio/src/pages/client-page/client-page.scss
+++ b/desafio/src/pages/client-page/client-page.scss
@@ -1,6 +1,6 @@
 .client-main-box{
     display: flex;
-
+    
     .input-main-box{
         height: 100vh;
         width: 40%;
@@ -67,13 +67,37 @@
     }
 
     .list-main-box{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow-y: scroll;
+        article{
+            h1{
+                padding: 20px;
+            }
+            p{
+                padding: 20px;
+                padding-top: 0px;
+            }
+        }
+
+        .list-box{
+            max-width: 100%;
+            padding: 20px;
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 20px;
+           // grid-auto-rows: minmax(270px, auto);
+        }
 
     }
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
     .client-main-box{
-        flex-direction: column-reverse;
+        flex-direction: column;
 
         .input-main-box{
             height: 50vh;
@@ -98,7 +122,6 @@
             section{
                 width: 100%;
                 display: flex;
-                overflow-y: scroll;
     
                 form{
                     width: 100%;
@@ -106,8 +129,6 @@
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-    
-                  
                 }
             }
         }
@@ -121,5 +142,70 @@
 
 @media screen and (orientation: portrait) {
 
+    .client-main-box{
+        height: 150vh;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .input-main-box{
+
+        height: fit-content;
+        width: 100%;
+        border-right: none;
+        min-height: fit-content;
+        margin-bottom: 30px;
+
+        article{
+            width: 100%;
+            padding: 20px;
+            height: 100px;
+        }
+
+        section{
+            width: 100%;
+            display: flex;
+
+            form{
+                width: 100%;
+                padding: 20px;
+                display: flex;
+                flex-direction: column;
+
+                input{
+                    transition: 400ms;
+                    color: #666;
+                    height: 30px;
+                    width: 80%;
+                    margin-bottom: 20px;
+                    border-radius: 15px;
+                    padding: 10px;
+                    border: rgba(204, 204, 204, 0.5) solid 1px;
+                }
+                button{
+                    width: 150px;
+                }
+            }
+        }
+    }
+
+    .list-main-box{
+        height: 80vh;
+        margin-bottom: 10vh;
+        overflow-y: scroll;
+        article{
+            //display: none;
+        }
+    }
+}
+
+@media screen and(min-width: 1800px) {
+    .list-box{
+        max-width: 100%;
+        padding: 20px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
     
 }
