--- a/desafio/src/pages/client-page/client-page.scss
+++ b/desafio/src/pages/client-page/client-page.scss
@@ -42,6 +42,12 @@
                     
                     transform: scale(1.005);
                 }
+                .button-box{
+                    width: 100%;
+                    //background-color: red;
+                    display: flex;
+                    justify-content: space-around;
+                }
 
                 button{
                     transition: 400ms;
@@ -53,6 +59,11 @@
                     border-radius: 15px;
                     margin-bottom: 0;
                     margin-top: 20px;
+                    width: 45%;
+                    max-width: 200px;
+                }
+                button:last-child{
+                    background-color: rgb(158, 18, 18);
                 }
                 button:hover{
                     transition: 400ms;
