--- a/desafio/src/pages/main-page/main-page.scss
+++ b/desafio/src/pages/main-page/main-page.scss
@@ -1,21 +1,25 @@
-.loading-box{
-    width: 100%; height: 100vh; display: flex; align-items: center;justify-content: center;
+.loading-box {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
-.home-main-box{
-    
+.home-main-box {
+
     width: 100%;
 
-    article{
+    article {
         padding: 20px;
         height: 150px;
         display: flex;
         flex-direction: column;
         justify-content: center;
 
-        input{
-            height: 20px; 
+        input {
+            height: 20px;
             width: 60%;
             margin-top: 10px;
             color: #666;
@@ -25,13 +29,14 @@
             outline: none;
             border: rgba(204, 204, 204, 0.5) solid 1px;
         }
-        
+
     }
 
-    .align-box{
+    .align-box {
         display: flex;
         justify-content: center;
-        div{
+
+        div {
             max-width: 100%;
             padding: 20px;
             display: grid;
@@ -41,14 +46,14 @@
         }
     }
 
-    .controls-box{
+    .controls-box {
         height: 50px;
         margin-bottom: 120px;
         display: flex;
         align-items: center;
         justify-content: center;
 
-        button{
+        button {
             transition: 400ms;
             height: 40px;
             width: 80px;
@@ -57,19 +62,22 @@
             border-radius: 15px;
             color: #666;
         }
-        button:first-child{
+
+        button:first-child {
             margin-right: 10px;
         }
-        button:last-child{
+
+        button:last-child {
             margin-left: 10px;
         }
-        button:hover{
+
+        button:hover {
             transition: 400ms;
             background-color: #2F2F3B;
             color: #fff;
         }
 
-        h4{
+        h4 {
             align-items: center;
             background-color: #2F2F3B;
             color: #fff;
@@ -87,7 +95,7 @@
 
 @media screen and (orientation:portrait) {
 
-    article{
+    article {
         padding: 20px;
         height: 150px;
         display: flex;
@@ -95,22 +103,22 @@
         justify-content: center;
         background-color: #2F2F3B;
 
-        h1{
+        h1 {
             color: #fff;
             margin-bottom: 10px;
         }
 
-        p{
+        p {
             color: #fff;
             font-weight: 400;
         }
     }
-    
-    .align-box{
+
+    .align-box {
         display: flex;
         justify-content: center;
 
-        div{
+        div {
             max-width: 100%;
             padding: 20px;
             display: grid;
@@ -123,23 +131,24 @@
 
 
 @media screen and(max-width: 850px) {
-    .home-main-box{
-    
+    .home-main-box {
+
         width: 100%;
         //height: 100vh;
-    
-        article{
+
+        article {
             padding: 20px;
             height: 150px;
             display: flex;
             flex-direction: column;
             justify-content: center;
         }
-    
-        .align-box{
+
+        .align-box {
             display: flex;
             justify-content: center;
-            div{
+
+            div {
                 max-width: 100%;
                 padding: 20px;
                 display: grid;
@@ -154,23 +163,24 @@
 
 @media screen and(max-width:1200px) and (min-width: 851px) {
 
-    .home-main-box{
-    
+    .home-main-box {
+
         width: 100%;
         //height: 100vh;
-    
-        article{
+
+        article {
             padding: 20px;
             height: 150px;
             display: flex;
             flex-direction: column;
             justify-content: center;
         }
-    
-        .align-box{
+
+        .align-box {
             display: flex;
             justify-content: center;
-            div{
+
+            div {
                 max-width: 100%;
                 padding: 20px;
                 display: grid;
@@ -186,23 +196,24 @@
 
 @media screen and(min-width:1500px) {
 
-    .home-main-box{
-    
+    .home-main-box {
+
         width: 100%;
         //height: 100vh;
-    
-        article{
+
+        article {
             padding: 20px;
             height: 150px;
             display: flex;
             flex-direction: column;
             justify-content: center;
         }
-    
-        .align-box{
+
+        .align-box {
             display: flex;
             justify-content: center;
-            div{
+
+            div {
                 max-width: 100%;
                 padding: 20px;
                 display: grid;
@@ -212,28 +223,29 @@
             }
         }
     }
-    
+
 }
 
 @media screen and(min-width:1900px) {
 
-    .home-main-box{
-    
+    .home-main-box {
+
         width: 100%;
         //height: 100vh;
-    
-        article{
+
+        article {
             padding: 20px;
             height: 150px;
             display: flex;
             flex-direction: column;
             justify-content: center;
         }
-    
-        .align-box{
+
+        .align-box {
             display: flex;
             justify-content: center;
-            div{
+
+            div {
                 max-width: 100%;
                 padding: 20px;
                 display: grid;
