--- a/desafio/src/pages/client-page/client-page.scss
+++ b/desafio/src/pages/client-page/client-page.scss
@@ -36,6 +36,13 @@
                     border: rgba(204, 204, 204, 0.5) solid 1px;
                 }
 
+                input[type=number]::-webkit-inner-spin-button,
+                input[type=number]::-webkit-outer-spin-button {
+                    -webkit-appearance: none;
+                    -moz-appearance:textfield;
+                    margin: 0;
+                }
+
                 input:focus {
                     outline: none;
                     transition: 400ms;
@@ -218,6 +225,8 @@
 
 @media screen and(min-width: 1800px) {
     .list-box {
+        max-width: 100%;
+      
         max-width: 100%;
         padding: 20px;
         display: grid;
