--- a/desafio/src/pages/client-page/client-page.scss
+++ b/desafio/src/pages/client-page/client-page.scss
@@ -39,7 +39,7 @@
                 input[type=number]::-webkit-inner-spin-button,
                 input[type=number]::-webkit-outer-spin-button {
                     -webkit-appearance: none;
-                    -moz-appearance:textfield;
+                    -moz-appearance: textfield;
                     margin: 0;
                 }
 
@@ -223,15 +223,18 @@
     }
 }
 
-@media screen and(min-width: 1800px) {
-    .list-box {
-        max-width: 100%;
-      
-        max-width: 100%;
-        padding: 20px;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
+@media screen and (max-height: 900px) {
+
+    .client-main-box {
+        height: 180vh;
+    }
+
+}
+
+@media screen and (max-height: 700px) {
+
+    .client-main-box {
+        height: 200vh;
     }
 
 }
